--- a/templates/students/students.html
+++ b/templates/students/students.html
@@ -97,12 +97,15 @@
                               <td>{{s.mobile_number}} </td>
                               <td>{{s.parents.permanent_address}}</td>
                               <td class="text-end">
-                                 <div class="actions ">
-                                    <a href="javascript:;" class="btn btn-sm bg-success-light me-2 ">
-                                    <i class="feather-eye"></i>
-                                    </a>
-                                    <a href="edit-student.html" class="btn btn-sm bg-danger-light">
-                                    <i class="feather-edit"></i>
+                                 <div class="actions">
+                                    <form action="{% url 'delete_student' s.slug %}" method="post" style="display: inline;">
+                                       {% csrf_token %}
+                                       <button type="submit" class="btn btn-sm bg-danger-light" onclick="return confirm('Are you sure you want to delete this Student?');">
+                                          <i class="feather-trash"></i>
+                                       </button>
+                                    </form>
+                                    <a href="{% url 'edit_student' s.slug %}" class="btn btn-sm bg-danger-light">
+                                       <i class="feather-edit"></i>
                                     </a>
                                  </div>
                               </td>
